[project]
name = "gera-rar-linker-updater"
version = "0.1.0"
description = ""
authors = [
    {name = "Krzysiek Nowakowski",email = "knowakowski@pm.me"}
]
readme = "README.md"
requires-python = "^3.9.19"

[tool.poetry]
packages = [
    {include = "linker_updater"}
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
linker-updater = "linker_updater.__main__:main"

[tool.poetry.dependencies]
loguru = "^0.7.3"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
pyyaml = "^6.0.2"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
